# artdaq_demo

./: .gitignore  CMakeLists.txt  CreateNewFragmentGenerator.rb
artdaq-demo/: CMakeLists.txt
artdaq-demo/ArtModules/: ASCIIDump_module.cc  ArtdaqDemoBuildInfo_module.cc  Baseline_module.cc  CMakeLists.txt  CRTDump_module.cc  CheckIntegrity_module.cc  CompressionChecker_module.cc  Compression_module.cc  Converter_module.cc  DataCharacterizer_module.cc  Decompression_module.cc  DemoInput_source.cc  EventDump_module.cc  NthEvent_module.cc  RootApplication_module.cc  Summer_module.cc  ToyDump_module.cc  WFViewer_module.cc  converter_algs.cc
artdaq-demo/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
artdaq-demo/Generators/: AsciiSimulator.hh  AsciiSimulator_generator.cc  CMakeLists.txt  CRTFragGen.hh  CRTFragGen_generator.cc  NormalSimulator.hh  NormalSimulator_generator.cc  PatternSimulator.hh  PatternSimulator_generator.cc  ToySimulator.hh  ToySimulator_generator.cc  UDPReceiver.hh  UDPReceiver_generator.cc  V172xFileReader.hh  V172xFileReader_generator.cc  V172xSimulator.hh  V172xSimulator_generator.cc
artdaq-demo/Generators/CRTInterface/: CRTInterface.cc  CRTInterface.hh  CRTdecode.cc  CRTdecode.hh
artdaq-demo/Generators/ToyHardwareInterface/: CMakeLists.txt  CRTdecode.cc  CRTdecode.hh  ToyHardwareInterface.cc  ToyHardwareInterface.hh
artdaq-demo/Products/: classes.h  classes_def.xml
artdaq-demo/RoutingPolicies/: CMakeLists.txt  MisbehaviorTest_policy.cc  NthEvent_policy.cc
artdaq-demo/TransferPlugins/: CMakeLists.txt  NthEvent_transfer.cc  modulo_transfer.cc
examples/: README.examples
examples/asciiSimulator/: manageAsciiSimulatorExample.sh  quick-start.sh  runAsciiSimulatorExample.sh  startAsciiSimulatorExample.sh
examples/cfgManagement/: quick-start.sh
examples/metrics/: DemoControl.rb  generateAggregatorMain.rb  generateEventBuilderMain.rb  quick-start.sh  start2x2x2System.sh
examples/mfextensions/: manage2x2x2System.sh  quick-start.sh
examples/requestBasedDataFlow/: CRVToySimulator.fcl  DAQToySimulator.fcl  DCSToySimulator.fcl  README  manageRequestBasedDataFlowExample.sh  runRequestBasedDataFlowExample.sh  (+1 more)
test/: CMakeLists.txt
tools/: CMakeLists.txt  CreateNewFragmentGenerator.rb  DemoControl.rb  RunDriver.rb  demo_driver.cc  downloadDeps.sh  generateAggregator.rb  generateAggregatorMain.rb  generateBoardReaderMain.rb  generateEventBuilder.rb  generateEventBuilderMain.rb  generateFragmentReceiver.rb  generateRoutingMasterMain.rb  generateToy.rb  generateWFViewer.rb  installArtDaqDemo.sh  manage2x2System.sh  manage2x2x2System.sh  manage2x2x2x1System.sh  manage2x2x2x2System.sh  manage2x2x4System.sh  manage5x2x2System.sh  manageSystem.sh  manageXxYSystem.sh  multi_udp_send_artdaq.py  quick-mrb-start.sh  quick-start.sh  readfhicl.cc  run_demo.sh  setupDemoEnvironment.sh  start2x2System.sh  start2x2x2System.sh  start2x2x2x1System.sh  start2x2x2x2System.sh  start2x2x4System.sh  start5x2x2System.sh  startSystem.sh  startXxYSystem.sh  xt_cmd.sh
tools/fcl/: AsciiSimulator.fcl  DemoDriverNoDisk.fcl  DemoDriverWithDisk.fcl  ToySimulator.fcl  TransferInput.fcl  TransferInputMulticast.fcl  TransferInputShmem.fcl  UDPReceiver.fcl  V172xSimulator.fcl  driver.fcl  driver_test1.fcl  driver_test1a.fcl  driver_test2.fcl  driver_test3.fcl  driver_test4.fcl  multicast.fcl  shmem.fcl  test_10Mx3000000_nodisk3.fcl  test_10Mx300000_nodisk4.fcl  test_10Mx30000_binbuf3.fcl  test_10Mx30000_bindirect3.fcl  test_10Mx30000_binnull3.fcl  test_10Mx30000_binnull4.fcl  test_10Mx30000_root2.fcl  test_10Mx30000_root3.fcl  test_10Mx30000_root4.fcl  test_1Mx300000_binnull4.fcl
tools/snippets/: eventbuilder_t1.erb.fcl  eventbuilder_t2.erb.fcl
tools/snippets/templates/: outputs.fcl
ups/: product_deps
(+27 files in other folders)
